11-20-08: add SphericalNode.setConvertToImage to make convertToImage property mutable
11-20-08: created this change log file