@@ -144,7 +144,6 @@
 	<classpathentry kind="lib" path="contrib/beanshell/lib/servlet.jar"/>
 	<classpathentry kind="lib" path="build-tools/jsch/jsch.jar"/>
 	<classpathentry kind="lib" path="contrib/piccolo-sax/piccolo-sax.jar"/>
-	<classpathentry kind="lib" path="contrib/svgsalamander/svgSalamander-tiny.jar"/>
 	<classpathentry kind="lib" path="contrib/jfreechart/lib/jfreechart.jar" sourcepath="contrib/jfreechart/jfreechart-src.zip"/>
 	<classpathentry kind="lib" path="build-tools/apache-ant/lib/ant-junit.jar"/>
 	<classpathentry kind="lib" path="build-tools/proguard/lib/proguard.jar" sourcepath="build-tools/proguard/proguard-src.zip"/>
