@@ -1,2 +1,3 @@
+1-6-09: delete experimental SVG support (BufferedSVGNode, contrib/svgsalamander)
 11-20-08: add SphericalNode.setConvertToImage to make convertToImage property mutable
 11-20-08: created this change log file
